[tool.poetry]
name = "running-for-stats"
version = "0.1.0"
description = ""
authors = ["Willem Houck"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.17.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
urllib3 = "^2.2.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
